--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -16,6 +16,8 @@
 %% Pictures to include in the text can be put in the graphics/ folder
 \graphicspath{{graphics/}}
 \usepackage{minted}
+\usepackage{lscape}
+\usepackage{titlesec}
 
 %For displaying codeblocks :
 
@@ -163,8 +165,8 @@
 
 \chapter{Lijst van afkortingen}
 \begin{acronym}
-    \acro{QR}{Quick response}
-    \acro{NFC}{Near-field communication}
+    \acro{JSON}{JavaScript Object Notation}
+    \acro{FAQ}{Frequently Asked Questions}
 \end{acronym}
 
 %---------- Kern ---------------------------------------------------------------
