--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -185,4 +185,158 @@
   title  = {The base16, base32, and base64 data encodings},
 }
 
+@Online{base64decode,
+  author  = {base64decode},
+  title   = {Base 64 decode and encode},
+  url     = {https://www.base64decode.org/},
+  urldate = {2023-03-24},
+}
+
+@Online{Concept,
+  author  = {Curious Concept},
+  title   = {Json Formatter & Validator},
+  url     = {https://jsonformatter.curiousconcept.com/},
+  urldate = {2023-03-20},
+}
+
+@Book{Richardson2013,
+  author  = {Matt Richardson and Shwan Wallace},
+  date    = {2013-04-26},
+  title   = {Getting started with Raspberry Pi},
+  edition = {2},
+  editor  = {Brian Jepson},
+  url     = {https://books.google.be/books?hl=nl&lr=&id=xYhMlilTwC4C&oi=fnd&pg=PR2&dq=what+is+a+raspberry+pi&ots=W5bdeyg8t2&sig=Gwjkp2YJ3l26RdBag33VtG5ZIco&redir_esc=y#v=onepage&q=what is a raspberry pi&f=false},
+  urldate = {2023-03-21},
+}
+
+@InProceedings{Weir2012,
+  author    = {Weir, Jonathan and Yan, WeiQi},
+  booktitle = {Digital Forensics and Watermarking},
+  date      = {2012},
+  title     = {Authenticating Visual Cryptography Shares Using 2D Barcodes},
+  editor    = {Shi, Yun Qing and Kim, Hyoung-Joong and Perez-Gonzalez, Fernando},
+  isbn      = {978-3-642-32205-1},
+  location  = {Berlin, Heidelberg},
+  pages     = {196--210},
+  publisher = {Springer Berlin Heidelberg},
+  abstract  = {One of the problems pertinent with many visual cryptography (VC) schemes is that of authentication. VC provides a way of sharing secrets between a number of participants. The secrets are in the form of an image that is encoded into multiple pieces known as shares. When these shares are physically superimposed, the secret can be instantly observed. A known problem is that of authentication. How is it possible to know that the secret being recovered is genuine? There has been some work devoted to this using so called cheating prevention schemes which attempt to provide a means of traceability or authentication via a set of additional shares that are used to check authenticity. This paper proposes a scheme that attempts to alleviate this suspicion by using 2D barcodes as a means of authentication which may have more practicality in terms of real world usage. Results are provided using an application that is available on mobile devices for portable barcode reading.},
+}
+
+@Article{Ritchie1978,
+  author       = {Ritchie, D. M. and Thompson, K.},
+  date         = {1978},
+  journaltitle = {Bell System Technical Journal},
+  title        = {The UNIX Time-Sharing System†},
+  doi          = {https://doi.org/10.1002/j.1538-7305.1978.tb02136.x},
+  eprint       = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/j.1538-7305.1978.tb02136.x},
+  number       = {6},
+  pages        = {1905-1929},
+  url          = {https://onlinelibrary.wiley.com/doi/abs/10.1002/j.1538-7305.1978.tb02136.x},
+  volume       = {57},
+  abstract     = {unix* is a general-purpose, multi-user, interactive operating system for the larger Digital Equipment Corporation pdp-11 and the Interdata 8/32 computers. It offers a number of features seldom found even in larger operating systems, including (i) A hierarchical file system incorporating demountable volumes, (ii) Compatible file, device, and inter-process I/O, (iii) The ability to initiate asynchronous processes, (iv) System command language selectable on a per-user basis, (v) Over 100 subsystems including a dozen languages, (vi) High degree of portability. This paper discusses the nature and implementation of the file system and of the user command interface.},
+}
+
+@Online{developmentteam,
+  author  = {OpenCv development team and community},
+  title   = {OpenCV (Open Source Computer Vision Library)},
+  url     = {https://docs.opencv.org/4.x/index.html},
+  urldate = {2023-03-27},
+}
+
+@Article{Huang2022,
+  author       = {Huang, Yuan and Cao, Peng and Li, Jie},
+  date         = {2022-02},
+  journaltitle = {Electronics Letters},
+  title        = {Research on multiplexed colour QR code with direct readability},
+  doi          = {10.1049/ell2.12433},
+  volume       = {58},
+}
+
+@Article{Jia2003,
+  author = {Jia, Jiyou},
+  date   = {2003-11},
+  title  = {The Study of the Application of a Keywords-based Chatbot System on the Teaching of Foreign Languages},
+}
+
+@Article{Khanna2015,
+  author       = {Anirudh Khanna and Bishwajeet Pandey and Kushagra Vashishta and Kartik Kalia and Bhale Pradeepkumar and Teerath Das},
+  date         = {2015},
+  journaltitle = {International Journal of u- and e- Service, Science and Technology},
+  title        = {A Study of Today's A.I. through Chatbots and Rediscovery of Machine Intelligence},
+  pages        = {277-284},
+  volume       = {8},
+}
+
+@Article{Shawar2007,
+  author       = {Bayan Abu Shawar and Eric Atwell},
+  date         = {2007},
+  journaltitle = {LDV Forum},
+  title        = {Chatbots: Are they Really Useful?},
+  pages        = {29-49},
+  volume       = {22},
+}
+
+@InBook{Turing2009,
+  author    = {Turing, Alan M.},
+  booktitle = {Parsing the Turing Test: Philosophical and Methodological Issues in the Quest for the Thinking Computer},
+  date      = {2009},
+  title     = {Computing Machinery and Intelligence},
+  doi       = {10.1007/978-1-4020-6710-5_3},
+  editor    = {Epstein, Robert and Roberts, Gary and Beber, Grace},
+  isbn      = {978-1-4020-6710-5},
+  location  = {Dordrecht},
+  pages     = {23--65},
+  publisher = {Springer Netherlands},
+  url       = {https://doi.org/10.1007/978-1-4020-6710-5_3},
+  abstract  = {I propose to consider the question, ``Can machines think?''â™£ This should begin with definitions of the meaning of the terms ``machine'' and ``think''. The definitions might be framed so as to reflect so far as possible the normal use of the words, but this attitude is dangerous. If the meaning of the words ``machine'' and ``think'' are to be found by examining how they are commonly used it is difficult to escape the conclusion that the meaning and the answer to the question, ``Can machines think?'' is to be sought in a statistical survey such as a Gallup poll.},
+}
+
+@Article{Weizenbaum1966,
+  author       = {Weizenbaum, Joseph},
+  date         = {1966-01},
+  journaltitle = {Commun. ACM},
+  title        = {ELIZA—a Computer Program for the Study of Natural Language Communication between Man and Machine},
+  doi          = {10.1145/365153.365168},
+  issn         = {0001-0782},
+  number       = {1},
+  pages        = {36–45},
+  url          = {https://doi.org/10.1145/365153.365168},
+  volume       = {9},
+  issue_date   = {Jan. 1966},
+  location     = {New York, NY, USA},
+  numpages     = {10},
+  publisher    = {Association for Computing Machinery},
+}
+
+@Online{Elsevier2004,
+  author = {Elsevier},
+  date   = {2004-11},
+  title  = {Scopus},
+  url    = {https://www.scopus.com/},
+}
+
+@InProceedings{Nimavat2017,
+  author = {Nimavat, Ketakee and Champaneria, Tushar},
+  date   = {2017-10},
+  title  = {Chatbots: An overview. Types, Architecture, Tools and Future Possibilities},
+}
+
+@Article{Kucherbaev2018,
+  author       = {Kucherbaev, Pavel and Bozzon, Alessandro and Houben, Geert-Jan},
+  date         = {2018},
+  journaltitle = {IEEE Internet Computing},
+  title        = {Human-Aided Bots},
+  doi          = {10.1109/MIC.2018.252095348},
+  number       = {6},
+  pages        = {36-43},
+  volume       = {22},
+}
+
+@Article{Hien2018,
+  author       = {Ho Thao Hien and Pham-Nguyen Cuong and Le Nguyen Hoai Nam and Ho Le Thi Kim Nhung and Thang Le Dinh},
+  date         = {2018},
+  journaltitle = {Proceedings of the 9th International Symposium on Information and Communication Technology},
+  title        = {Intelligent Assistants in Higher-Education Environments: The FIT-EBot, a Chatbot for Administrative and Learning Support},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
